# Product_Type

./: .env.example  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: fastapi.yml  python.yml
migrations/: env.py
migrations/versions/: e2fc90de9519_database_creation.py
src/: main.py
src/base/: models.py
src/config/: session.py  settings.py
src/models/: models.py
src/product/: routers.py  schemas.py  session.py
src/product_type/: routers.py  schemas.py  session.py
tests/: conftest.py
tests/base/: base_test.py
tests/fixtures/: product.py  product_type.py
tests/product/: test_create_product.py  test_list_product.py  test_product_detail.py
tests/product_type/: test_type_create.py  test_type_detail.py
