[tool.poetry]
name = "products type"
version = "0.1.0"
description = ""
authors = ["Kuzkin <heartsong_@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.2"
asyncpg = "0.29.0"
flake8 = "7.1.1"
python-dotenv = "1.0.1"
SQLAlchemy = "2.0.31"
uvicorn = "0.30.6"
httpx = "^0.27.2"
pytest = "^8.3.3"
aiosqlite = "0.20.0"
pytest-asyncio = "^0.24.0"
anyio = "^4.4.0"
fastapi = "0.112.1"
psycopg2-binary = "^2.9.9"
fastapi-pagination = "^0.12.27"
starlette = "^0.38.5"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
